Pasted-Traceback-most-recent-call-last-File-home-runner-DreamShare-pythonlibs-lib-python3-11-site-p-1730494755434.txt
Traceback (most recent call last):
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/default.py", line 941, in do_execute
    cursor.execute(statement, parameters)
psycopg2.errors.SyntaxError: syntax error at or near "user"
LINE 1: DROP TABLE IF EXISTS user CASCADE
                             ^


The above exception was the direct cause of the following exception:

Traceback (most recent call last):
  File "/home/runner/DreamShare/update_schema.py", line 36, in <module>
    update_schema()
  File "/home/runner/DreamShare/update_schema.py", line 19, in update_schema
    db.session.execute(text(f'DROP TABLE IF EXISTS {table} CASCADE'))
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/orm/scoping.py", line 778, in execute
    return self._proxied.execute(
           ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/orm/session.py", line 2362, in execute
    return self._execute_internal(
           ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/orm/session.py", line 2256, in _execute_internal
    result = conn.execute(
             ^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1418, in execute
    return meth(
           ^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/sql/elements.py", line 515, in _execute_on_connection
    return connection._execute_clauseelement(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1640, in _execute_clauseelement
    ret = self._execute_context(
          ^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1846, in _execute_context
    return self._exec_single_context(
           ^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1986, in _exec_single_context
    self._handle_dbapi_exception(
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 2355, in _handle_dbapi_exception
    raise sqlalchemy_exception.with_traceback(exc_info[2]) from e
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/base.py", line 1967, in _exec_single_context
    self.dialect.do_execute(
  File "/home/runner/DreamShare/.pythonlibs/lib/python3.11/site-packages/sqlalchemy/engine/default.py", line 941, in do_execute
    cursor.execute(statement, parameters)
sqlalchemy.exc.ProgrammingError: (psycopg2.errors.SyntaxError) syntax error at or near "user"
LINE 1: DROP TABLE IF EXISTS user CASCADE
                             ^

[SQL: DROP TABLE IF EXISTS user CASCADE]
(Background on this error at: https://sqlalche.me/e/20/f405)
